# printBuddies

./: README.md  pyproject.toml
src/printBuddies/: __init__.py  printBuddies.py
